# server-stats

./: Cargo.toml  README.md
crates/collector/: Cargo.toml
crates/collector/src/: config.rs  main.rs
crates/metrics_core/: Cargo.toml  build.rs
crates/metrics_core/proto/: metrics.proto
crates/metrics_core/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: config.rs  main.rs
